--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
   "name": "com.phonegap.plugins.nativesettingsopener",
-  "version": "1.0"
+  "version": "1.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ipehimanshu/Cordova-open-native-settings"
+  },
 }
