--- a/package.json
+++ b/package.json
@@ -5,4 +5,5 @@
     "type": "git",
     "url": "git+https://github.com/ipehimanshu/Cordova-open-native-settings"
   },
+  "homepage": "https://github.com/ipehimanshu/Cordova-open-native-settings#readme"
 }
